:recycle: refactor Pagination Performance Optimization about product